<resources>


    <string name="login_hint_user">Email</string>
    <string name="login_hint_passw">Password</string>
    <string name="login_btn_sign_in">SIGN IN</string>
    <string name="login_success">Login success</string>
    <string name="login_failed_try_again_later">Login failed, please try again later</string>
    <string name="login_failed">Login failed</string>
    <string name="logging_in">Logging in</string>
    <string name="ready_to_continue">Welcome to settings</string>
    <string name="hide_app">HIDE APP</string>
    <string name="checking_root">Turn on Accessibility</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="title_dialog">Message</string>
    <string name="msg_dialog_enable_keylogger"> child accessibility not found</string>
    <string name="msg_dialog_enable_overdraw">You need to activate the draw over other apps permission to be able to take photos</string>
    <string name="msg_dialog_enable_usage_stats">You need to activate the "Applications with use access"</string>
    <string name="enable_keylogger_success">Successful accessibility</string>

    <string name="accessibility_service_label">Child accessibility</string>
    <string name="accessibility_service_description">Child accessibility allows users to prevent, or limit access to, their handling, or their content to minors</string>
    <string name="msg_dialog_enable_accessibility_service">You need to enable the accessibility service so that the application works correctly.</string>
    <string name="enable_service">ENABLE SERVICES</string>
    <string name="enable_overdraw">ENABLE CAMERA SERVICES</string>
    <string name="enable_usage_stats">ENABLE USAGE STATS SERVICES</string>

    <string name="address_not_found">Address not found</string>
    <string name="hiding">Hiding…</string>

    <string name="permission_request">Permission request</string>
    <string name="message_permission">Permissions are required</string>
    <string name="message_permission_never_ask_again">Some permissions were denied, without them the application will not work correctly. To activate them you must go to \"Settings - applications - child - permissions\" and activate the corresponding permissions. Do you want to activate them now?</string>

    <string name="register" translatable="false">REGISTER</string>
    <string name="login_email_hint" translatable="false">Email</string>
    <string name="login_password_hint" translatable="false">Password</string>
    <string name="signup_login_hint" translatable="false">Already have an account? Sign In</string>
    <string name="login_signup_hint" translatable="false">Don\'t have an account? Sign Up</string>
    <string name="total_attendance">Total Attendance</string>
    <string name="_7days_week">7Days/Week</string>
    <string name="four_month_s_analysis">Four Month\'s Analysis</string>
    <string name="this_week_analysis">This Week Analysis</string>
    <string name="_01_april_2019">01 April 2019</string>
    <string name="scan_qr_code">Scan QR Code</string>


</resources>
