<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/headerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/reports_header_bk"
                android:paddingLeft="20dp"
                android:paddingTop="60dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:gravity="center_horizontal"
                    android:text="@string/_01_april_2019"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/drop_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_dropdown_arrow" />

                <TextView
                    android:id="@+id/salesHeaderTextView"
                    style="@style/reportContentText"
                    android:layout_marginTop="30dp"
                    android:text="@string/total_attendance" />

                <TextView
                    style="@style/viewParent.headerText"
                    android:layout_below="@id/salesHeaderTextView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="70dp"
                    android:text="@string/_7days_week"
                    android:textColor="@color/whiteTextColor" />


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/cardLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/headerLayout"
                android:layout_marginTop="-70dp">

                <android.support.v7.widget.CardView
                    style="@style/reportsCardStyle"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/reportContentText"
                            android:text="@string/four_month_s_analysis"
                            android:textColor="@color/colorAccent" />

                        <com.github.mikephil.charting.charts.BarChart
                            android:id="@+id/chart"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_margin="12dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/reportsCardStyle"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/reportContentText"
                            android:text="@string/this_week_analysis"
                            android:textColor="@color/colorAccent" />

                        <com.github.mikephil.charting.charts.BarChart
                            android:id="@+id/chart1"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_margin="12dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </LinearLayout>


                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="265dp"
                android:layout_below="@id/cardLayout"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/user_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/card_sales" />

                </android.support.v4.widget.NestedScrollView>


            </LinearLayout>


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/qrcode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
        app:layout_constraintVertical_bias="0.929" />

</android.support.constraint.ConstraintLayout>
